--- a/src/components/pages/Users.css
+++ b/src/components/pages/Users.css
@@ -70,6 +70,37 @@
     color: #aaa;
 }
 
+.users__filter-input-hidden {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+
+.users__custom-checkbox {
+    width: 24px;
+    height: 24px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    transition: background-color 0.15s ease, border-color 0.15s ease;
+}
+
+.users__filter-input-hidden:checked ~ .users__custom-checkbox {
+    background-color: #000000;
+    border-color: #000000;
+}
+
+.users__checkbox-icon {
+    color: #fff;
+}
+
 .users__filter-option {
     margin-top: 10px;
     display: flex;
